small nav button,gap issue,checkbottom ofcommon.js

--- a/resources/styles/home.css
+++ b/resources/styles/home.css
@@ -207,7 +207,9 @@ body {
     left: 0;
     height: 100%;
     display: flex;
-    gap: 20px;
+    /* gap: 20px; */
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
     transition: 0.5s;
 }
 
@@ -282,7 +284,7 @@ body {
         width: 90%;
     }
 
-    .believes { 
+    .believes {
         background-position: left top;
         background-attachment: initial;
     }
